--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "license": "ISC",
     "dependencies": {
         "@types/node": "^14.11.2",
+        "asyncpathutils": "0.0.2",
+        "successerror": "0.0.2",
         "syncpathutils": "^0.1.0",
         "typescript": "^4.0.3"
     },
